
New Features
************

Bug Fixes
*********

* Avoid UnicodeDecodeError in ``bzr add`` with multiple files under a non-ascii
  path on windows from symlink support addition. (Martin [gz], #686611)

* Don't probe for a repository from within ``NotBranchError.__repr__``,
  because this can cause knock-on errors at awkward times.
  (Andrew Bennetts, #687653)

* RevisionTree.is_executable no longer returns None for directories and
  symlinks.  Instead, it returns False, like other Trees and methods.
  (Aaron Bentley, #681885)

Improvements
************

Documentation
*************

API Changes
***********

Internals
*********

Testing
*******


bzr 2.2.2
#########

:2.2.2: 2010-11-25

This is a bugfix release. None of these bugfixes are critical, but upgrading
is recommended for all users on earlier 2.2 releases.

Bug Fixes
*********

* ``bzr resolve --take-other <file>`` will not crash anymore if ``<file>``
  is involved in a text conflict (but the conflict is still not
  resolved). (Vincent Ladeuil, #646961)

* Commit in a bound branch or heavyweight checkout now propagates tags
  (e.g. from a merge) to the master branch (and informs the user if there
  is a conflict).  (Andrew Bennetts, #603395)
  
* Correctly set the Content-Type header when http POSTing to comply
  with stricter web frameworks. (Vincent Ladeuil, #665100)

* ``NotBranchError`` no longer allows errors from calling
  ``bzrdir.open_repository()`` to propagate.  This is unhelpful at best,
  and at worst can trigger infinite loops in callers.  (Andrew Bennetts)
  
* Skip tests that needs a bzr source tree when there isn't one. This is
  needed to succesfully run the test suite for installed versions.
  (Vincent Ladeuil, #644855).

* Skip the tests that requires respecting the chmod bits when running as
  root. Including the one that wasn't present in 2.1.
  (Vincent Ladeuil, #646133)

* Using bzr with `lp:` urls behind an http proxy should work.
  (Robert Collins, #558343)
